--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -57,7 +57,8 @@
 					<hr>
 					<a href="https://childrenofnarcissists.org.uk/healthy-narcissism-vs-unhealthy-narcissism/" target="_blank">Healthy Narcissism Vs. Unhealthy Narcissism</a> </br>
 					<hr>
-					<a href="https://www.youtube.com/watch?v=Y1yvxKu-mOE" target="_blank">Diana Diamond: The Arc of Successful Treatment of Pathological Narcissism</a>
+					<a href="https://www.youtube.com/watch?v=Y1yvxKu-mOE" target="_blank">Diana Diamond: The Arc of Successful Treatment of Pathological Narcissism</a></br>
+					<a href="https://www.youtube.com/watch?v=XTOPIx0Y10g" target="_blank">Diana Diamond: Is Narcissism Treatable?</a>
 					<hr>			
 					<a href="https://marriagerecoverycenter.com/assertive-vs-aggressive-people/#:~:text=Narcissists%2C%20despite%20their%20dominating%20tendencies,in%20their%20interactions%20with%20others." target="_blank">Assertivness as a medicine</a>
 					</p>
