--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -55,6 +55,9 @@
 					<hr>
 					<a href="https://www.youtube.com/watch?v=tIBl7PWiZR8" target="_blank">The Need for Approval Makes You Invisible</a>
 					<hr>
+					<a href="https://www.youtube.com/watch?v=Hlm2E3zSNrQ" target="_blank">Who does the narcissist admire?</a>
+					<hr>
+					
 					</p>
 				</div>	
               </div>
