--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -55,9 +55,10 @@
 					<hr>
 					<a href="https://www.youtube.com/watch?v=tIBl7PWiZR8" target="_blank">The Need for Approval Makes You Invisible</a>
 					<hr>
-					<a href="https://www.youtube.com/watch?v=Hlm2E3zSNrQ" target="_blank">Who does the narcissist admire?</a>
+					<a href="https://www.youtube.com/watch?v=Hlm2E3zSNrQ" target="_blank">The Nameless Narcissist: Who does the narcissist admire?</a>
 					<hr>
-					
+					<a href="https://www.healthassured.org/blog/narcissists-greatest-fear/" target="_blank">Narcissists’ Greatest Fear</a>
+					<hr>
 					</p>
 				</div>	
               </div>
