--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>Changing life session 60 min</p>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">50</span></div>
-                <div class="pricing-box-label bg-gray-primary-light">each session</div>
+                <div class="pricing-box-label bg-gray">each session</div>
                 <p> Enhancing Spiritual Gifts <br> Inviting Abundance To Life <br> Zoom meeting</p>
 		<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">book</a>
               </div>
