--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -59,6 +59,7 @@
 					<hr>
 					<a href="https://www.healthassured.org/blog/narcissists-greatest-fear/" target="_blank">Narcissists’ Greatest Fear</a>
 					<hr>
+					<a href="https://www.linkedin.com/pulse/4-tips-stop-seeking-approval-others-jacob-morgan/" target="_blank">4 Tips to Stop Seeking The Approval Of Others</a>
 					</p>
 				</div>	
               </div>
