--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>Tarot Reading session 60 min</p>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">80</span></div>
-                <div class="pricing-box-label bg-gray-primary-light">each session</div>
+                <div class="pricing-box-label bg-gray">each session</div>
                 <p> Talking with your spirit guides <br> Searching spiritual guidelines <br> Zoom meeting</p>
 				<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/tarot-reading'});return false;">book</a>
               </div>
