--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
 
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blog/narcissisticlove.html"> 
+			    <a href="blog/narcissistic_love.html"> 
                 <div class="team-classic-img"><img src="images/blog/bomblove.png" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
