--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -33,7 +33,23 @@
           <div class="row row-50 justify-content-center">
 
 		  
-		  
+			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+  	    	<div class="blog-wrap team-classic-wrap">
+                <div class="team-classic-img"><img src="images/blog/bomblovesession.png" alt="" width="370" height="198"/></div>
+				<div class="blog-title-wrap">
+					<h5>Narcissism and love</h5>
+					<p>
+					<a href="https://www.verywellmind.com/can-a-narcissist-love-7112051" target="_blank">Can a Narcissist Love?</a>
+					<hr>
+					<a href="https://crossroadsantigua.org/7-stages-of-trauma-bonding/">7 Stages of Trauma Bonding</a></br>
+					<hr>
+					<a href="https://whatiscodependency.com/what-is-a-trauma-bond/#:~:text=In%20studies%2C%20rats%20neglected%20their,your%20partner's%20attention%20and%20validation." target="_blank">What Is a Trauma Bond?</a>
+					<hr>
+					<a href="https://www.psychologytoday.com/gb/blog/the-couch/201711/in-love-narcissist-6-ways-make-it-work" target="_blank">6 Ways to Make It Work</a>
+					</p>
+				</div>	
+              </div>
+			</div>		  
 		<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
   	    	<div class="blog-wrap team-classic-wrap">
                 <div class="team-classic-img"><img src="images/blog/synchronicities.jpg" alt="" width="370" height="198"/></div>
