--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -43,6 +43,9 @@
 					<hr>
 					<a href="https://crossroadsantigua.org/7-stages-of-trauma-bonding/">7 Stages of Trauma Bonding</a></br>
 					<hr>
+					<a href="https://www.medicalnewstoday.com/articles/326738#signs">Cognitive dissonance</a></br>
+					<hr>
+					
 					<a href="https://whatiscodependency.com/what-is-a-trauma-bond/#:~:text=In%20studies%2C%20rats%20neglected%20their,your%20partner's%20attention%20and%20validation." target="_blank">What Is a Trauma Bond?</a>
 					<hr>
 					<a href="https://www.psychologytoday.com/gb/blog/the-couch/201711/in-love-narcissist-6-ways-make-it-work" target="_blank">6 Ways to Make It Work</a>
