--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-NXSPV35');</script>
 	<!-- End Google Tag Manager -->
-    <title>Choose Frequency - Synchronicities Creation & Hypnosis</title>
+    <title>Choose Frequency - Spiritual Coaching & Hypnosis</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="main-decorated-box text-center text-xl-left">
 				  <div class="rd-navbar-brand">
 					<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/>
-					<span class="prefix-text text-white big font-weight-bold offset-top-30">Synchronicities Creation & Hypnosis</span></a>
+					<span class="prefix-text text-white big font-weight-bold offset-top-30">Spiritual Coaching & Hypnosis</span></a>
 				  </div>
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
 				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
@@ -145,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					I started the journey of life with a lot of obstacles to overcome. 
 					And I learned, eventually, how to turn them to my benefit. 
 					How to transmute pain into creativity and grow at my own pace toward wherever my imagination can take me.   
-					I have become a <span class="default-letter-spacing font-weight-bold ">Synchronicities Creation Coach and Narcissism Relief Coach</span>. I help people who are going through an awakening, which 
+					I have become a <span class="default-letter-spacing font-weight-bold ">Spiritual Coach and Hypnotherapist</span>. I help people who are going through an awakening, which 
 					might have been triggered by painful experiences or developed naturally. 
 					I help my clients to refocus from difficult situations in their lives by going towards their potential and exploring its true nature.
 					To start creating their synchronicities and manifest quicker whatever they desire. 
