--- a/books.html
+++ b/books.html
@@ -40,7 +40,7 @@
 					<div class="col-lg-6 book_img">
 						<div class="team-classic-wrap">
 							<img src="images/books/book01_mockups.png" alt=""/>
-							<a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="https://www.amazon.co.uk/dp/B0CW18VY2S/ref=sr_1_1?crid=1AJTYPC221YOF&dib=eyJ2IjoiMSJ9.vou3Ci684hxnUgcUrDsHJ5FCq9xei7a3uAvVObrvea4WHOBP-qujOj9cYXOnzJ2vDISgkv8guhzpSnVwwz-zIS32KJFS2nEr6jZuOU19o1jVduqsu5P3quH1IuB8X0bxsKjz8RT6N2VD1RxW4m7KemgZvzHjbBKRifZheDJujS95VPdlr5K2OZJ33zeq_t_e.dp4vnxQt0ERjuWdUsEyRViVJoIrLvBnOQghfSQ9rgqM&dib_tag=se&keywords=Create%20Your%20Synchronicities&qid=1710262768&s=books&sprefix=create%20your%20synchronicities%2Cstripbooks%2C65&sr=1-1&fbclid=IwAR0_4waIB6KgA0J-k_52c6JmSR_THefWM0x-PaEMVXUqRuF9_hQCX3s3i50">read more</a>
+							<a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="https://www.amazon.co.uk/dp/B0CW18VY2S">read more</a>
 						</div>
 					</div>
 					<div class="col-lg-6">
