--- a/books.html
+++ b/books.html
@@ -39,8 +39,11 @@
 				<div class="row">
 					<div class="col-lg-12 book_img">
 						<div class="team-classic-wrap">
-							<div style="float:left"><img src="images/books/book01_mockups.png" alt="" /></div>
-							<div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="https://www.amazon.co.uk/dp/B0CW18VY2S">read more</a></div>
+							<div style="float:left">
+								<div><img src="images/books/book01_mockups.png" alt="" style="height:400px"/></div>
+								<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="https://www.amazon.com/dp/B0CW18VY2S">read more</a></div>
+							</div>
+							<div>
 							<p> &nbsp; &nbsp; &nbsp; "You do not even know how powerful being you are. For many people, spiritual awakening brings only the beginning to the most profound understanding of the powers around us. Explaining which, using only what is available to our human perception, is beyond comprehension. </p>
 							<p> &nbsp; &nbsp; &nbsp; It is only possible when you trust yourself strongly enough to let your imagination and intuition build your belief system. Releasing yourself from the matrix of standard costumes and rules is vital on this quest to find your grail. </p>
 							<p> &nbsp; &nbsp; &nbsp; When you achieve all the goals you planned when you were young, what else can be more exciting than the game you have not seen yet? The game has yet to be described. You will not find it in any book from your childhood or any life of friends you know. Something exciting that would keep you interested enough to keep you playing. </p>
@@ -57,6 +60,7 @@
 							<p>5. Becoming a new human species. Ways to activate DNA</p>
 							<p>6. Ascension to the higher dimension to set synchronicities</p>
 							<p>7. What higher dimension comes with</p>
+							</div>
 						</div>
 					</div>
 					<div class="col-lg-6">
