--- a/collaboration.html
+++ b/collaboration.html
@@ -30,6 +30,17 @@
       <section class="section section-md">
         <div class="container collaboration_container">
           <div class="row row-50 justify-content-center">
+	    <div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/mccabe.png" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">Steve McCabe</h4><a href="https://steve-mccabe.co.uk/" target="_blank">www.steve-mccabe.co.uk</a>
+                  <p>Cognitive Hypnotherapy</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
+            </div>
             <div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="team-classic-wrap">
                 <div class="team-classic-img"><img src="images/nickstolerman.jpg" alt="" width="370" height="198"/>
