--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
           </div>
           <div class="row row-30 justify-content-center">
-            <div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
+            <!--<div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
               <div class="pricing-box bg-gray-primary">
                 <div class="pricing-box-tittle">Starter</div>
                 <p>Initial session 30 min</p>
@@ -267,27 +267,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>Verifying goals <br> Setting Up Strategy <br> Zoom meeting</p>
 				<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/starter'});return false;">book</a>
 			   </div>
-            </div>
+            </div>-->
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
-                <div class="pricing-box-tittle">Experience</div>
-                <p>Changing life session 60 min</p>
+                <div class="pricing-box-tittle">Spiritual Awakening Phases 5x1h sessions program</div>
+                <p>The amazing opportunity to discover unique phases in spiritual awakening</p>
                 <hr/>
-                <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">55</span></div>
+                <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">299</span></div>
                 <div class="pricing-box-label bg-gray">each session</div>
                 <p> Enhancing Spiritual Gifts <br> Inviting Abundance To Life <br> Zoom meeting</p>
 		<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">book</a>
-              </div>
-            </div>
-	    <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
-              <div class="pricing-box bg-gray-primary">
-                <div class="pricing-box-tittle">Tarot</div>
-                <p>Tarot Reading session 60 min</p>
-                <hr/>
-                <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">50</span></div>
-                <div class="pricing-box-label bg-gray">each session</div>
-                <p> Talking with your spirit guides <br> Searching spiritual guidelines <br> Zoom meeting</p>
-				<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/tarot-reading'});return false;">book</a>
               </div>
             </div>
 	    <!--<div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
