--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="section-name wow fadeInRight" data-wow-delay=".2s">Pricing Options</div>
               <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">Find the perfect plan for<span class="text-primary"> your soul</span></h3>
 <!--              <p class="wow price">I offer three different pricing plans that can help to fulfil my client's needs. Feel free to select a preferable plan or learn more about each of them below.</p>-->
-              <p class="wow price">I offer a first free welcoming session to talk about your needs and goals.<br> We both can check if we can work together and what can be achieved.</p
+              <p class="wow price">We both can check if we can work together and what can be achieved.<br>Refund guaranteed in case of not resonant energies.</p
 			  				
 				<p><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></p>
 
@@ -270,11 +270,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>-->
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
-                <div class="pricing-box-tittle">Spiritual Awakening Phases 5x1h sessions program</div>
-                <p>The amazing opportunity to discover unique phases in spiritual awakening</p>
+                <div class="pricing-box-tittle"><strong>Spiritual Awakening Phases</strong></div>
+                <p>The amazing opportunity to enhance spirituality after awakening</p>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">299</span></div>
-                <div class="pricing-box-label bg-gray">each session</div>
+                <div class="pricing-box-label bg-gray"> 5 x 1h sessions </div>
                 <p> Enhancing Spiritual Gifts <br> Inviting Abundance To Life <br> Zoom meeting</p>
 		<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">book</a>
               </div>
