--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">299</span></div>
                 <div class="pricing-box-label bg-gray"> 5 x 1h sessions </div>
-                <p> Enhancing Spiritual Gifts <br> Inviting Abundance To Life <br> Zoom meeting</p>
+                <p> Enhancing Spiritual Gifts <br> Inviting Abundance To Life <br> Zoom meetings</p>
 		<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">book</a>
               </div>
             </div>
