--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
                 <div class="pricing-box-tittle"><strong>Spiritual Awakening Phases</strong></div>
-                <p>The amazing opportunity to enhance spirituality after awakening</p>
+                <p>The amazing opportunity to enhance spirituality after awakening and become a spirit guide</p>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">299</span></div>
                 <div class="pricing-box-label bg-gray"> 5 x 1h sessions </div>
