--- a/index.html
+++ b/index.html
@@ -257,24 +257,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
           </div>
           <div class="row row-30 justify-content-center">
-            <!--<div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
+            <div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
               <div class="pricing-box bg-gray-primary">
-                <div class="pricing-box-tittle">Starter</div>
-                <p>Initial session 30 min</p>
+                <div class="pricing-box-tittle">Vibrations Enhance</div>
+                <p>Life Changing session 60 min</p>
                 <hr/>
-                <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">10</span></div>
+                <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">50</span></div>
                 <div class="pricing-box-label bg-gray">once</div>
-                <p>Verifying goals <br> Setting Up Strategy <br> Zoom meeting</p>
-				<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/starter'});return false;">book</a>
+                <p>Creating a new reality <br> Enhancing Spiritual Gifts <br> Zoom meetings</p>
+				<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/changinglife60min'});return false;">book</a>
 			   </div>
-            </div>-->
+            </div>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
                 <div class="pricing-box-tittle"><strong>Spiritual Awakening Phases</strong></div>
                 <p>The amazing opportunity to enhance spirituality after awakening and become a spirit guide</p>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">299</span></div>
-                <div class="pricing-box-label bg-gray"> 5 x 1h sessions </div>
+                <div class="pricing-box-label bg-gray"> 7 x 1h sessions </div>
                 <p> Enhancing Spiritual Gifts <br> Inviting Abundance To Life <br> Zoom meetings</p>
 		<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">book</a>
               </div>
