--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-sm-10 col-12">
-              <div class="block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img src="images/about-1-570x703.jpg" alt="" width="570" height="351"/>
+              <div class="block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img src="images/Malgorzata_Witkowska01.jpg" alt="" width="570" height="351"/>
               </div>
             </div>
           </div>
