--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
           <div class="row row-30">
             <div class="col-lg-6 first-picture">
-              <div class="overlay_images block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img class="firstImg" src="images/hypnotherapyOffice.jpg" alt="" width="570" height="351"/>
+              <div class="overlay_images block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img class="firstImg" src="images/Malgorzata_Witkowska_03.jpg" alt="" width="570" height="351"/>
 				<!--<a href="https://drive.google.com/file/d/1jk9jDhNE7z9R2Ch1ZwJ6CJDIt9BY8u8r/view?usp=share_link" target="_blank"><img class="book" src="images/books/vibrations.png" alt="Raising Vibrations for Manifestations" ></a>-->
 			  </div>
 
@@ -234,7 +234,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
         <div class="image-left-side wow slideInRight" data-wow-delay=".5s">
-		<img src="images/home-2-636x480.jpg" alt="" width="636" height="600"/> 
+		<img src="images/tor.jpg" alt="" width="636" height="600"/> 
 
 
 
