--- a/index.html
+++ b/index.html
@@ -80,23 +80,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<!-- Calendly link widget end -->
 		  
-      <section class="section main-section parallax-scene-js" style="background-image:url('images/bg-1-1700x803.jpg')">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-xl-8 col-12">
-              <div class="main-decorated-box text-center text-xl-left">
-				  <div class="rd-navbar-brand">
-					<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/>
-					<span class="prefix-text text-white big font-weight-bold offset-top-30">Spiritual Coaching & Hypnosis</span></a>
-				  </div>
-                <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
-				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
-                <div class="decorated-subtitle text-italic text-white wow slideInLeft">the one you want to experience.</div>
-              </div>
-            </div>
-            <div class="col-12 text-center offset-top-75" data-wow-delay=".2s"><a class="button-way-point d-inline-block text-center d-inline-flex flex-column justify-content-center" href="#" data-custom-scroll-to="about"><span class="fa-chevron-down"></span></a></div>
-          </div>
-        </div>
+      <section class="section main-section parallax-scene-js" style="background-color:grey">
+
         <div class="decorate-layer">
           <div class="layer-1">
             <div class="layer" data-depth=".20"><img src="images/parallax-item-1-563x532.png" alt="" width="563" height="266"/>
