--- a/contacts.html
+++ b/contacts.html
@@ -50,8 +50,8 @@
                   <label class="form-label label-textarea" for="contact-message">Message<span class="req-symbol">*</span></label>
                   <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required" rows="10"></textarea>
                 </div>
-				<!-- hCaptcha Spam Protection -->
-				<div class="h-captcha" data-captcha="true"></div>
+				<!-- hCaptcha Spam Protection 
+				<div class="h-captcha" data-captcha="true"></div> -->
 
 				<div class="form-button group-sm text-center text-lg-left">
 					<button class="button button-primary" type="submit">Submit</button>
