--- a/contacts.html
+++ b/contacts.html
@@ -49,8 +49,8 @@
 					  <input class="form-input" id="name" type="text" name="contact-name" data-constraints="@Required" required="required">
 					</div>
 					<div class="form-wrap">
-					  <label class="form-label" for="email">E-Mail<span class="req-symbol">*</span></label>
-					  <input class="form-input" id="email" type="email" name="contact-email" data-constraints="@Required @Email" required="required">
+					  <label class="form-label" for="reply_to">E-Mail<span class="req-symbol">*</span></label>
+					  <input class="form-input" id="reply_to" type="email" name="contact-email" data-constraints="@Required @Email" required="required">
 					</div>
 					<div class="form-wrap">
 						<label class="form-label label-textarea" for="message">Message<span class="req-symbol">*</span></label>
