--- a/index - Copy.html
+++ b/index - Copy.html
@@ -80,16 +80,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<!-- Calendly link widget end -->
 		  
-      <section class="section main-section parallax-scene-js" style="background-color:cadetblue">
+      <section class="section main-section parallax-scene-js" style="background-image:url('images/bg-1-1700x803.jpg')">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 col-12">
-             <!-- <div class="main-decorated-box text-center text-xl-left">
+              <div class="main-decorated-box text-center text-xl-left">
+				  <div class="rd-navbar-brand">
+					<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/>
+					<span class="prefix-text text-white big font-weight-bold offset-top-30">Spiritual Coaching & Hypnosis</span></a>
+				  </div>
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
-				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest font-weight-bold">frequency</span></h1>
-                <span class="text-italic text-white wow slideInLeft">the one you want to experience.</span>
-              </div>-->
+				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
+                <div class="decorated-subtitle text-italic text-white wow slideInLeft">the one you want to experience.</div>
+              </div>
             </div>
+            <div class="col-12 text-center offset-top-75" data-wow-delay=".2s"><a class="button-way-point d-inline-block text-center d-inline-flex flex-column justify-content-center" href="#" data-custom-scroll-to="about"><span class="fa-chevron-down"></span></a></div>
           </div>
         </div>
         <div class="decorate-layer">
@@ -122,7 +127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--About-->
       <section class="section section-sm position-relative" id="about">
         <div class="container">
-          <div class="main-about-section row row-30">
+          <div class="row row-30">
             <div class="col-lg-6 first-picture">
               <div class="overlay_images block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img class="firstImg" src="images/Malgorzata_Witkowska_03.jpg" alt="" width="570" height="351"/>
 				<!--<a href="https://drive.google.com/file/d/1jk9jDhNE7z9R2Ch1ZwJ6CJDIt9BY8u8r/view?usp=share_link" target="_blank"><img class="book" src="images/books/vibrations.png" alt="Raising Vibrations for Manifestations" ></a>-->
@@ -130,11 +135,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             </div>
             <div class="col-lg-6 col-12">
-              <div class="calling text-center text-xl-left">
-                <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
-				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest font-weight-bold">frequency</span></h1>
-                <span class="subtitle text-italic text-white wow slideInLeft">the one you want to experience</span>
-              </div>			
               <div class="block-sm">
                 <div class="section-name wow fadeInRight" data-wow-delay=".2s">About me</div>
                 <h3 class="wow fadeInLeft text-capitalize devider-bottom" data-wow-delay=".3s">
@@ -155,28 +155,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</p>	
 <!--				<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
 					YouTube: examples of my work</a><br>-->
-				<div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
-              </div>
-            </div>
-			<div class="col-lg-12 col-12">
+			<div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
 				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">
-				Hypnotherapist (<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">General Hypnotherapy Register</a>) and 
-				Life Coach (<a href="https://coach-accreditation.services/view/coach-mentor-profile/entry/2528/" target="_blank">Coach & Mentor Directories</a>)<br/>
+				I am Registered <br/>
+				Hypnotherapist accredited by the GHSC<br/>
+				(<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">General Hypnotherapy Register</a>) and<br/> 
+				Accredited Practitioner Coach by the IAPC&M <br/>
+				(<a href="https://coach-accreditation.services/view/coach-mentor-profile/entry/2528/" target="_blank">Coach & Mentor Directories</a>)<br/>
 				</p>
 				<a href="https://general-hypnotherapy-register.com/" target="_blank">
-					<img src="images/ghsc_accrediter-transparent.png" alt="Girl in a jacket" width="210">
+					<img src="images/ghsc_accrediter.png" alt="Girl in a jacket" width="210">
 				</a>				
 				<a href="https://coach-accreditation.services/view/coach-mentor-profile/entry/2528/" target="_blank">
-					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="" width="300" height="300">
+					<img src="images/IAPCM-Logo.png" alt="" width="300" height="300">
 				</a>
-	
-			</div>
+              </div>
+            </div>
           </div>
         </div>
-	    <div class="decor-text decor-text-1">ABOUT</div>
-
-		
-        
+        <div class="decor-text decor-text-1">ABOUT</div>
       </section>
       <!--Features-->
       <section class="section custom-section position-relative section-md">
