--- a/index.html
+++ b/index.html
@@ -83,13 +83,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <section class="section main-section parallax-scene-js" style="background-color:cadetblue">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-xl-8 col-12">
-             <!-- <div class="main-decorated-box text-center text-xl-left">
-                <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
-				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest font-weight-bold">frequency</span></h1>
-                <span class="text-italic text-white wow slideInLeft">the one you want to experience.</span>
-              </div>-->
-            </div>
           </div>
         </div>
         <div class="decorate-layer">
@@ -132,7 +125,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-lg-6 col-12">
               <div class="calling text-center text-xl-left">
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
-				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest font-weight-bold">frequency</span></h1>
+				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span></br><span class="biggest font-weight-bold">frequency</span></h1>
                 <span class="subtitle text-italic text-white wow slideInLeft">the one you want to experience</span>
               </div>			
               <div class="block-sm">
@@ -173,7 +166,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
           </div>
         </div>
-	    <div class="decor-text decor-text-1">ABOUT</div>
+	    <div class="section-decorator decor-text decor-text-1">ABOUT</div>
 
 		
         
@@ -242,7 +235,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
         </div>
-        <div class="decor-text decor-text-2 wow fadeInUp" data-wow-delay=".3s">features</div>
+        <div class="section-decorator decor-text decor-text-2 wow fadeInUp" data-wow-delay=".3s">features</div>
       </section>
   
       <!--Pricing-->
