--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				Hypnotherapist (<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">General Hypnotherapy Register</a>) and 
 				Life Coach (<a href="https://coach-accreditation.services/view/coach-mentor-profile/entry/2528/" target="_blank">Coach & Mentor Directories</a>)<br/>
 				</p>
-				<a href="https://general-hypnotherapy-register.com/" target="_blank">
-					<img src="images/ghsc_accrediter-transparent.png" alt="Girl in a jacket" width="210">
+				<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">
+					<img src="images/ghsc_accrediter-transparent.png" alt="" width="210">
 				</a>				
 				<a href="https://coach-accreditation.services/view/coach-mentor-profile/entry/2528/" target="_blank">
 					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="" width="300" height="300">
