--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="section-name wow fadeInRight" data-wow-delay=".2s">Pricing Options</div>
               <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">Find the perfect plan for<span class="text-primary"> your soul</span></h3>
 <!--              <p class="wow price">I offer three different pricing plans that can help to fulfil my client's needs. Feel free to select a preferable plan or learn more about each of them below.</p>-->
-              <p class="wow price">We both can check if we can work together and what can be achieved.<br>Refund guaranteed in case of not resonant energies.</p
+				<p class="wow price">Let me help you to find a way to your prosperity and  fulfilment.<br>Book a workshop which will teach you how to build life on your terms.</p
 			  				
 				<p><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></p>
 
