--- a/contacts.html
+++ b/contacts.html
@@ -35,11 +35,11 @@
 				<form id="contact-form" name="contact-form"> 
 					<div class="form-wrap">
 					  <label class="form-label" for="name">Name<span class="req-symbol">*</span></label>
-					  <input class="form-input" id="name" type="text" name="contact-name" data-constraints="@Required" required="required">
+					  <input class="form-input" id="name" type="text" name="name" data-constraints="@Required" required="required">
 					</div>
 					<div class="form-wrap">
 					  <label class="form-label" for="reply_to">E-Mail<span class="req-symbol">*</span></label>
-					  <input class="form-input" id="reply_to" type="email" name="contact-email" data-constraints="@Required @Email" required="required">
+					  <input class="form-input" id="reply_to" type="email" name="reply_to" data-constraints="@Required @Email" required="required">
 					</div>
 					<div class="form-wrap">
 						<label class="form-label label-textarea" for="message">Message<span class="req-symbol">*</span></label>
@@ -66,7 +66,7 @@
 	<script src="js/loadEssencials.js"></script>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-	<script src="js/contacts.js"></script>
+	<script src="js/sgts.js"></script>
 
   </body>
 </html>
