--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<!-- Calendly link widget end -->
 		  
-      <section class="section main-section parallax-scene-js" style="background-color:cadetblue">
+      <section class="section main-section parallax-scene-js">
         <div class="container">
           <div class="row justify-content-center">
           </div>
