--- a/academy.html
+++ b/academy.html
@@ -32,6 +32,9 @@
           <!--RD Mailform-->
           <div class="row justify-content-center">
             <div class="col-xl-12 col-md-12 col-12">
+				<div class="img_title">
+				  <img id="ubs_title" src="images/ubs/ubs_title.jpg" alt="">
+				</div>
 				
 				<div class="img_07">
 				  <img class ="zoom" id="ubs" src="images/ubs/ubs_07.jpg" alt="">
@@ -141,9 +144,6 @@
 				</div>
 
             </div>
-			<div>
-				<img id="ubs" src="images/ubs/academy_logo.jpg" alt="">
-			</div>
           </div>
         </div>
       </section>
