--- a/academy.html
+++ b/academy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Contacts</title>
+    <title>Academy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -154,7 +154,6 @@
 	<script src="js/loadEssencials.js"></script>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-	<script src="js/contacts.js"></script>
 
   </body>
 </html>
