--- a/academy.html
+++ b/academy.html
@@ -47,7 +47,7 @@
 					Or when compassion is not our priority and we complain about the world turning violent. We just stopped imagining nice people. 
 					<br/>
 					<br/>
-					<span class="special-text">The S.A.C.R.E.D. Paradigm Pathway</span> will take you on the journey to discover joy and happiness and will provide strategies first to find it within and later to become compelling to your surroundings and see your powers when you start influencing something you once called unchangeable, namely the crowd.
+					<span class="special-text">The S.A.F.E. Spiritual Awakening</span> will take you on the journey to discover joy and happiness and will provide strategies first to find it within and later to become compelling to your surroundings and see your powers when you start influencing something you once called unchangeable, namely the crowd.
 					<br/>
 					It will be mission accomplished.
 				</div>
