--- a/academy.html
+++ b/academy.html
@@ -94,7 +94,7 @@
 					<br/>
 					<br/>
 					I help them to strengthen their electromagnetic field by creating a coherent state between their brain and heart to broadcast their signal, their thoughts—to the Universe. 
-					It might sound difficult, but it can become incredibly intuitive after applying the rules from <span class="special-text">the Emotional B.R.I.D.G.E. Blueprint</span>. You will learn how to use your mind to create information and send it with the strength of your coherent heart to influence the world's farthest corners and bring a shift to global consciousness, thereby spreading your message. 
+					It might sound difficult, but it can become incredibly intuitive after applying the rules from <span class="special-text">the Emotional P.U.L.S.E. Paradigm</span>. You will learn how to use your mind to create information and send it with the strength of your coherent heart to influence the world's farthest corners and bring a shift to global consciousness, thereby spreading your message. 
 				</div>
 
 				<div class="img_03">
@@ -107,7 +107,7 @@
 					Research shows that 95% of our decisions, reactions, realisations, insights, and manifestations happen automatically at subconscious level. It all depends on the programming stored there, which has roots mostly in childhood and is not necessarily easy or helpful. It depends on past experiences. It can cause you to self-sabotage or procrastinate everything, even when you hear your calling. It will do anything to help you avoid things that caused you pain and disappointment in the past.
 					<br/>
 					<br/>
-					Reprogramming your subconscious and using this powerful autopilot for your benefit is easy. In <span class="special-text">the Powerful H.I.D.D.E.N. Program</span>, I will show you techniques to tame this beast and make it work for you. For example, you can stop fearing public speaking or people in general. You will learn how to self-program your subconscious so that it will provide you support for any dream you want to make happen. 
+					Reprogramming your subconscious and using this powerful autopilot for your benefit is easy. In <span class="special-text">the Powerful S.E.L.F. Program</span>, I will show you techniques to tame this beast and make it work for you. For example, you can stop fearing public speaking or people in general. You will learn how to self-program your subconscious so that it will provide you support for any dream you want to make happen. 
 				</div>
 				
 				<div class="img_02">
