--- a/academy.html
+++ b/academy.html
@@ -39,6 +39,14 @@
 				<div class="img_07">
 				  <img class ="zoom" id="ubs" src="images/ubs/ubs_07.jpg" alt="">
 				</div>
+				<iframe
+    src="https://drive.google.com/viewerng/viewer?embedded=true&url=http://infolab.stanford.edu/pub/papers/google.pdf#toolbar=0&scrollbar=0"
+    frameBorder="0"
+    scrolling="auto"
+    height="100%"
+    width="100%"
+></iframe>
+				
 				<div class="ubs_07">
 					We are meant to initiate co-creation with all energetic expressions. Evolution does not happen to you. You are evolution. We collectively change reality, not only of ours but all existence. 
 					<br/>
