--- a/academy.html
+++ b/academy.html
@@ -25,13 +25,18 @@
     <div class="page">
       
 	<header id="mainHeader" class="header-academy"></header>
-
+			
       <!--Mailform-->
       <section class="section section-md">
         <div class="container">
           <!--RD Mailform-->
           <div class="row justify-content-center">
             <div class="col-xl-12 col-md-12 col-12">
+			
+				<div class="img_title">
+				  <h1 class="font-weight-bold wow fadeInLeft"><a class='rd-nav-link' href='qcc_workbook.html' target='_blank'><i class="fa fa-book" aria-hidden="true"></i> QCC Workbook Link</a><h1>
+				</div>
+			
 				<div class="img_title">
 				  <img id="ubs_title" src="images/ubs/ubs_title.jpg" alt="">
 				</div>
@@ -39,14 +44,7 @@
 				<div class="img_07">
 				  <img class ="zoom" id="ubs" src="images/ubs/ubs_07.jpg" alt="">
 				</div>
-				<iframe
-    src="https://drive.google.com/viewerng/viewer?embedded=true&url=http://infolab.stanford.edu/pub/papers/google.pdf#toolbar=0&scrollbar=0"
-    frameBorder="0"
-    scrolling="auto"
-    height="100%"
-    width="100%"
-></iframe>
-				
+
 				<div class="ubs_07">
 					We are meant to initiate co-creation with all energetic expressions. Evolution does not happen to you. You are evolution. We collectively change reality, not only of ours but all existence. 
 					<br/>
