--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta class="metaTagTop" name="keywords" content="healing, hypnosis, Hypnotherapy, tarot, spirituality, synchronicity">
 	<meta class="metaTagTop" name="author" content="Gosia Witkowska">
-    <link rel="icon" href="images/CF_LogoCircle.png" type="image/x-icon">
+    <link rel="icon" href="images/Logo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
