--- a/thankyouforbooking.html
+++ b/thankyouforbooking.html
@@ -21,7 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="images/CF_LogoCircle.png" type="image/x-icon">
+    <link rel="icon" href="images/Logo.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
