--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="col-lg-6 col-12">
               <div class="calling text-center text-xl-left">
+			  <img id='header-logo' class='brand-logo-dark' src='images/Logo.png' alt='' style='width:100%; height:auto; max-width:40px;'/>
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
 				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span></br><span class="biggest font-weight-bold">frequency</span></h1>
                 <span class="subtitle text-italic text-white wow slideInLeft">the one you want to experience</span>
