--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: right; color: red;"></a>
 				</h3>
                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
-					I started the journey of life with a lot of obstacles to overcome. 
-					And I learned, eventually, how to turn them to my benefit. 
-					How to transmute pain into creativity and grow at my own pace toward wherever my imagination can take me.   
-					I have become a <span class="default-letter-spacing font-weight-bold ">Spiritual Coach and Hypnotherapist</span>. I help people who are going through an awakening, which 
-					might have been triggered by painful experiences or developed naturally. 
-					I help my clients to refocus from difficult situations in their lives by going towards their potential and exploring its true nature.
-					To start creating their synchronicities and manifest quicker whatever they desire. 
-		       			I show people how to merge with their higher-self by raising vibrations and tapping into their abilities. 
+I began my life's journey with numerous obstacles to overcome.
+And I eventually learned how to turn them to my benefit. 
+How to transmute pain into creativity and grow at my own pace toward wherever my imagination can take me.   
+I have become a <span class="default-letter-spacing font-weight-bold ">Spiritual Coach and Hypnotherapist</span>. I help people who are going through an awakening, which
+might have been triggered by painful experiences or developed naturally.
+I help my clients refocus from difficult situations in their lives by guiding them towards their potential and exploring its true nature.
+To start creating their synchronicities and manifest quickly whatever they desire.
+      I help people merge with their higher self by raising their vibrations and tapping into their abilities. 
 				
 
 				</p>	
