--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@ To start creating their synchronicities and manifest quickly whatever they desir
 			<div class="col-lg-12 col-12">
 				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">
 				Hypnotherapist (<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">General Hypnotherapy Register</a>) and 
-				Life Coach (<a href="https://directory.coach-accreditation.services/member/choosefrequency@gmail.com/" target="_blank">Coach & Mentor Directories</a>)<br/>
+				Life Coach (<a href="https://directory.coach-accreditation.services/member/choosefrequencygmail-com/profile/" target="_blank">Coach & Mentor Directories</a>)<br/>
 				</p>
 				<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">
 					<img src="images/ghsc_accrediter-transparent.png" alt="" width="210">
 				</a>				
-				<a href="https://directory.coach-accreditation.services/member/choosefrequency@gmail.com/" target="_blank">
+				<a href="https://directory.coach-accreditation.services/member/choosefrequencygmail-com/profile/" target="_blank">
 					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="" width="300" height="300">
 				</a>
 	
